change the auto-formatting to google from eclipse google in spotless