@@ -21,15 +21,16 @@ class AirbyteIntegrationLauncherTest {
   private static final int JOB_ATTEMPT = 0;
   private static final Path JOB_ROOT = Path.of("abc");
   public static final String FAKE_IMAGE = "fake_image";
-  private static final Map<String, String> CONFIG_FILES = ImmutableMap.of(
-      "config", "{}");
-  private static final Map<String, String> CONFIG_CATALOG_FILES = ImmutableMap.of(
-      "config", "{}",
-      "catalog", "{}");
-  private static final Map<String, String> CONFIG_CATALOG_STATE_FILES = ImmutableMap.of(
-      "config", "{}",
-      "catalog", "{}",
-      "state", "{}");
+  private static final Map<String, String> CONFIG_FILES = ImmutableMap.of("config", "{}");
+  private static final Map<String, String> CONFIG_CATALOG_FILES =
+      ImmutableMap.of(
+          "config", "{}",
+          "catalog", "{}");
+  private static final Map<String, String> CONFIG_CATALOG_STATE_FILES =
+      ImmutableMap.of(
+          "config", "{}",
+          "catalog", "{}",
+          "state", "{}");
 
   private ProcessFactory processFactory;
   private AirbyteIntegrationLauncher launcher;
@@ -44,55 +45,106 @@ class AirbyteIntegrationLauncherTest {
   void spec() throws WorkerException {
     launcher.spec(JOB_ROOT);
 
-    Mockito.verify(processFactory).create(JOB_ID, JOB_ATTEMPT, JOB_ROOT, FAKE_IMAGE, false, Collections.emptyMap(), null,
-        WorkerUtils.DEFAULT_RESOURCE_REQUIREMENTS, Map.of(KubeProcessFactory.JOB_TYPE, KubeProcessFactory.SPEC_JOB),
-        "spec");
+    Mockito.verify(processFactory)
+        .create(
+            JOB_ID,
+            JOB_ATTEMPT,
+            JOB_ROOT,
+            FAKE_IMAGE,
+            false,
+            Collections.emptyMap(),
+            null,
+            WorkerUtils.DEFAULT_RESOURCE_REQUIREMENTS,
+            Map.of(KubeProcessFactory.JOB_TYPE, KubeProcessFactory.SPEC_JOB),
+            "spec");
   }
 
   @Test
   void check() throws WorkerException {
     launcher.check(JOB_ROOT, "config", "{}");
 
-    Mockito.verify(processFactory).create(JOB_ID, JOB_ATTEMPT, JOB_ROOT, FAKE_IMAGE, false, CONFIG_FILES, null,
-        WorkerUtils.DEFAULT_RESOURCE_REQUIREMENTS, Map.of(KubeProcessFactory.JOB_TYPE, KubeProcessFactory.CHECK_JOB),
-        "check",
-        "--config", "config");
+    Mockito.verify(processFactory)
+        .create(
+            JOB_ID,
+            JOB_ATTEMPT,
+            JOB_ROOT,
+            FAKE_IMAGE,
+            false,
+            CONFIG_FILES,
+            null,
+            WorkerUtils.DEFAULT_RESOURCE_REQUIREMENTS,
+            Map.of(KubeProcessFactory.JOB_TYPE, KubeProcessFactory.CHECK_JOB),
+            "check",
+            "--config",
+            "config");
   }
 
   @Test
   void discover() throws WorkerException {
     launcher.discover(JOB_ROOT, "config", "{}");
 
-    Mockito.verify(processFactory).create(JOB_ID, JOB_ATTEMPT, JOB_ROOT, FAKE_IMAGE, false, CONFIG_FILES, null,
-        WorkerUtils.DEFAULT_RESOURCE_REQUIREMENTS, Map.of(KubeProcessFactory.JOB_TYPE, KubeProcessFactory.DISCOVER_JOB),
-        "discover",
-        "--config", "config");
+    Mockito.verify(processFactory)
+        .create(
+            JOB_ID,
+            JOB_ATTEMPT,
+            JOB_ROOT,
+            FAKE_IMAGE,
+            false,
+            CONFIG_FILES,
+            null,
+            WorkerUtils.DEFAULT_RESOURCE_REQUIREMENTS,
+            Map.of(KubeProcessFactory.JOB_TYPE, KubeProcessFactory.DISCOVER_JOB),
+            "discover",
+            "--config",
+            "config");
   }
 
   @Test
   void read() throws WorkerException {
     launcher.read(JOB_ROOT, "config", "{}", "catalog", "{}", "state", "{}");
 
-    Mockito.verify(processFactory).create(JOB_ID, JOB_ATTEMPT, JOB_ROOT, FAKE_IMAGE, false, CONFIG_CATALOG_STATE_FILES, null,
-        WorkerUtils.DEFAULT_RESOURCE_REQUIREMENTS,
-        Map.of(KubeProcessFactory.JOB_TYPE, KubeProcessFactory.SYNC_JOB, KubeProcessFactory.SYNC_STEP, KubeProcessFactory.READ_STEP),
-        Lists.newArrayList(
-            "read",
-            "--config", "config",
-            "--catalog", "catalog",
-            "--state", "state"));
+    Mockito.verify(processFactory)
+        .create(
+            JOB_ID,
+            JOB_ATTEMPT,
+            JOB_ROOT,
+            FAKE_IMAGE,
+            false,
+            CONFIG_CATALOG_STATE_FILES,
+            null,
+            WorkerUtils.DEFAULT_RESOURCE_REQUIREMENTS,
+            Map.of(
+                KubeProcessFactory.JOB_TYPE,
+                KubeProcessFactory.SYNC_JOB,
+                KubeProcessFactory.SYNC_STEP,
+                KubeProcessFactory.READ_STEP),
+            Lists.newArrayList(
+                "read", "--config", "config", "--catalog", "catalog", "--state", "state"));
   }
 
   @Test
   void write() throws WorkerException {
     launcher.write(JOB_ROOT, "config", "{}", "catalog", "{}");
 
-    Mockito.verify(processFactory).create(JOB_ID, JOB_ATTEMPT, JOB_ROOT, FAKE_IMAGE, true, CONFIG_CATALOG_FILES, null,
-        WorkerUtils.DEFAULT_RESOURCE_REQUIREMENTS,
-        Map.of(KubeProcessFactory.JOB_TYPE, KubeProcessFactory.SYNC_JOB, KubeProcessFactory.SYNC_STEP, KubeProcessFactory.WRITE_STEP),
-        "write",
-        "--config", "config",
-        "--catalog", "catalog");
+    Mockito.verify(processFactory)
+        .create(
+            JOB_ID,
+            JOB_ATTEMPT,
+            JOB_ROOT,
+            FAKE_IMAGE,
+            true,
+            CONFIG_CATALOG_FILES,
+            null,
+            WorkerUtils.DEFAULT_RESOURCE_REQUIREMENTS,
+            Map.of(
+                KubeProcessFactory.JOB_TYPE,
+                KubeProcessFactory.SYNC_JOB,
+                KubeProcessFactory.SYNC_STEP,
+                KubeProcessFactory.WRITE_STEP),
+            "write",
+            "--config",
+            "config",
+            "--catalog",
+            "catalog");
   }
-
 }
